macros/tests/entry/fail/duplicate.stderr
error: Duplicate attribute `log`
 --> tests/entry/fail/duplicate.rs:5:25
  |
5 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "nuefi")]
  |                         ^^^

error: Duplicate attribute `delay`
 --> tests/entry/fail/duplicate.rs:5:30
  |
5 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "nuefi")]
  |                              ^^^^^^^^^^

error: Duplicate attribute `crate`
 --> tests/entry/fail/duplicate.rs:5:59
  |
5 | #[entry(log, delay(69), log, delay(420), crate = "nuefi", crate = "nuefi")]
  |                                                           ^^^^^^^^^^^^^^^
